fix mobile nav cannot scroll, z-index for form, icon for profile link

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -146,6 +146,7 @@ header .nav-link.btn-outline-primary:hover {
   width: 100%;
   left: 0;
   top: 0;
+  overflow: auto;
 }
 
 #header-mobile .collapsing {
@@ -161,6 +162,12 @@ header .nav-link.btn-outline-primary:hover {
 #header-mobile .navbar-toggler-icon {
   width: 1.5em;
   height: 1.5em;
+}
+
+#header-mobile .nav-item {
+  width: 100%;
+  text-align: left;
+  margin: 0.5rem 0;
 }
 
 #header-mobile .navbar-toggler {
